--- a/front-end/views/home.admin.html
+++ b/front-end/views/home.admin.html
@@ -87,7 +87,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="../../scripts//navbar.js"></script>
+    <script src="/scripts/navbar.js"></script>
 
     <script>
       // Datos de los alumnos (copiados del JSON proporcionado)
